finally fixed the z-index problem

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -198,6 +198,7 @@ header nav {
   font-size: 1em;
   position: fixed;
   width: 100%;
+  z-index: 2;
 }
 header nav a {
   color: inherit;
